--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -7,7 +7,7 @@
 .profile__info {
   display: grid;
   grid-template-areas: "title button" "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
+  grid-template-columns: minmax(auto, 375px) auto;
 }
 
 .profile__edit-button {
@@ -17,6 +17,11 @@
   grid-area: button;
 }
 
+.profile__edit-button:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
 .profile__add-button {
   background: transparent url(../images/plus_icon.svg) center no-repeat;
   width: 150px;
@@ -24,9 +29,14 @@
   margin-left: auto;
 }
 
+.profile__add-button:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
 .profile__title {
   font-size: 42px;
-  line-height: 48px;
+  line-height: 1.1;
   font-weight: 500;
   grid-area: title;
   margin: 0;
@@ -34,7 +44,7 @@
 
 .profile__description {
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   font-weight: 400;
   grid-area: description;
   margin: 0;
@@ -47,4 +57,61 @@
   object-fit: cover;
   background-position: center;
   margin-right: 24px;
+}
+
+@media screen and (max-width: 321px) {
+  .profile {
+    margin-top: 42px;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    line-height: 1.2;
+    weight: 500;
+  }
+
+  .profile__description {
+    font-size: 14px;
+    weight: 400;
+    margin-top: 14px;
+  }
+
+  .profile__info {
+    margin-bottom: 36px;
+    margin-top: 30px;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+  }
+
+  .profile__add-button {
+    width: 282px;
+    height: 50px;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    margin: 0;
+  }
 }
