--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,13 +1,14 @@
 .profile {
   display: flex;
-  align-items: center;
   padding-top: 40px;
+  align-items: center;
 }
 
 .profile__info {
   display: grid;
   grid-template-areas: "title button" "description description";
   grid-template-columns: minmax(auto, 375px) auto;
+  align-items: center;
 }
 
 .profile__edit-button {
@@ -15,6 +16,7 @@
   height: 24px;
   width: 24px;
   grid-area: button;
+  margin-left: 25px;
 }
 
 .profile__edit-button:hover {
@@ -47,7 +49,7 @@
   line-height: 1.2;
   font-weight: 400;
   grid-area: description;
-  margin: 0;
+  margin: 7px 0 0;
 }
 
 .profile__image {
@@ -67,12 +69,12 @@
   .profile__title {
     font-size: 22px;
     line-height: 1.2;
-    weight: 500;
+    font-weight: 500;
   }
 
   .profile__description {
     font-size: 14px;
-    weight: 400;
+    font-weight: 400;
     margin-top: 14px;
   }
 
