--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,79 +1,11 @@
 .cards {
-  margin-top: 30px;
+  margin-top: 51px;
 }
 
-.card__list {
+.cards__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
   padding: 0;
   margin: 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  list-style-type: none;
-  overflow: hidden;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-}
-
-.card__title {
-  font-size: 24px;
-  line-height: 1.2;
-  font-weight: 900;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 219px;
-}
-
-.card__description {
-  display: flex;
-  background-color: white;
-  color: black;
-  padding: 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card__like-button {
-  background: transparent url(../images/heart.svg) center no-repeat;
-  width: 21px;
-  height: 18px;
-  border: none;
-}
-
-.card__like-button:hover {
-  opacity: 50%;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 321px) {
-  .card__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .card__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 776px) {
-  .card__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
 }
