--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,7 @@
 .footer {
   margin: 67px 0 60px 200px;
+  display: flex;
+  align-items: baseline;
 }
 
 .footer__copyright {
@@ -7,6 +9,7 @@
   font-weight: 400;
   line-height: 1.2;
   color: #545454;
+  margin: 0;
 }
 
 @media screen and (max-width: 321px) {
@@ -16,7 +19,5 @@
 
   .footer__copyright {
     font-size: 14px;
-    font-weight: 400;
-    line-height: 1.2;
   }
 }
