--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,10 +17,11 @@
   width: 24px;
   grid-area: button;
   margin-left: 25px;
+  border: solid 1px #fff;
 }
 
 .profile__edit-button:hover {
-  opacity: 50%;
+  background: transparent url(../images/edit_button_hover.svg) center no-repeat;
   cursor: pointer;
 }
 
@@ -29,10 +30,11 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
+  border: solid 2px #fff;
 }
 
 .profile__add-button:hover {
-  opacity: 50%;
+  background: transparent url(../images/plus_icon_hover.svg) center no-repeat;
   cursor: pointer;
 }
 
@@ -42,6 +44,10 @@
   font-weight: 500;
   grid-area: title;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 415px;
 }
 
 .profile__description {
@@ -50,6 +56,10 @@
   font-weight: 400;
   grid-area: description;
   margin: 7px 0 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 415px;
 }
 
 .profile__image {
@@ -59,6 +69,29 @@
   object-fit: cover;
   background-position: center;
   margin-right: 24px;
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 321px) {
@@ -91,29 +124,10 @@
   .profile__add-button {
     width: 282px;
     height: 50px;
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .profile {
-    flex-direction: column;
-    padding: 0;
   }
 
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-  }
-
-  .profile__add-button {
-    margin: 0;
+  .profile__add-button:hover {
+    width: 282px;
+    height: 50px;
   }
 }
