--- a/blocks/card.css
+++ b/blocks/card.css
@@ -39,7 +39,7 @@
 }
 
 .card__like-button:hover {
-  background: transparent url(../images/like_button_hover.svg) center no-repeat;
+  opacity: 50%;
   cursor: pointer;
 }
 
