--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,7 @@
   margin-top: 45px;
   border-bottom: solid 1px #545454;
   height: 74px;
+  padding: 0;
 }
 
 .header__image {
@@ -19,7 +20,7 @@
   }
 }
 
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 620px) {
   .header__image {
     width: 126px;
     height: 24px;
