--- a/blocks/page.css
+++ b/blocks/page.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 0 20px;
 }
 
 .page__section {
@@ -15,4 +16,11 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 620px);
+ {
+  .page__content {
+    padding: 0;
+  }
 }
