--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -21,7 +21,7 @@
 }
 
 .profile__edit-button:hover {
-  background: transparent url(../images/edit_button_hover.svg) center no-repeat;
+  opacity: 60%;
   cursor: pointer;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .profile__add-button:hover {
-  background: transparent url(../images/plus_icon_hover.svg) center no-repeat;
+  opacity: 60%;
   cursor: pointer;
 }
 
@@ -71,32 +71,11 @@
   margin-right: 24px;
 }
 
-@media screen and (max-width: 480px) {
-  .profile {
-    flex-direction: column;
-    padding: 0;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-  }
-
-  .profile__add-button {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 620px) {
   .profile {
     margin-top: 42px;
+    flex-direction: column;
+    padding: 0;
   }
 
   .profile__title {
@@ -109,11 +88,17 @@
     font-size: 14px;
     font-weight: 400;
     margin-top: 14px;
+    width: 100%;
+    text-align: center;
   }
 
   .profile__info {
     margin-bottom: 36px;
     margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
   }
 
   .profile__edit-button {
@@ -124,10 +109,16 @@
   .profile__add-button {
     width: 282px;
     height: 50px;
+    margin: 0 auto;
   }
 
   .profile__add-button:hover {
     width: 282px;
     height: 50px;
+    margin: 0 auto;
+  }
+
+  .profile__image {
+    margin: 0;
   }
 }
