--- a/blocks/page.css
+++ b/blocks/page.css
@@ -18,8 +18,7 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 620px);
- {
+@media screen and (max-width: 620px) {
   .page__content {
     padding: 0;
   }
