--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,6 +17,7 @@
 @media screen and (max-width: 620px) {
   .footer {
     margin: 48px 19px 36px;
+    max-width: 282px;
   }
 
   .footer__copyright {
