--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,6 +1,6 @@
 .header {
   margin-top: 45px;
-  border-bottom: solid 1px #545454;
+  border-bottom: solid 1px rgb(84, 84, 84, 0.7);
   height: 74px;
   padding: 0;
 }
