--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,6 +17,7 @@
   width: 24px;
   grid-area: button;
   margin-left: 25px;
+  margin-right: 0;
   border: solid 1px #fff;
 }
 
@@ -31,6 +32,7 @@
   height: 50px;
   margin-left: auto;
   border: solid 2px #fff;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
@@ -81,12 +83,10 @@
   .profile__title {
     font-size: 22px;
     line-height: 1.2;
-    font-weight: 500;
   }
 
   .profile__description {
     font-size: 14px;
-    font-weight: 400;
     margin-top: 14px;
     width: 100%;
     text-align: center;
@@ -108,17 +108,26 @@
 
   .profile__add-button {
     width: 282px;
-    height: 50px;
-    margin: 0 auto;
-  }
-
-  .profile__add-button:hover {
-    width: 282px;
-    height: 50px;
     margin: 0 auto;
   }
 
   .profile__image {
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 621px) and (max-width: 810px) {
+  .profile__title {
+    font-size: 30px;
+    line-height: 1.2;
+  }
+  .profile__edit-button {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (min-width: 810px) {
+  .profile__title {
+    font-size: 42px;
   }
 }
