--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -78,11 +78,13 @@
     margin-top: 42px;
     flex-direction: column;
     padding: 0;
+    margin-bottom: 36px;
   }
 
   .profile__title {
     font-size: 22px;
     line-height: 1.2;
+    max-width: 196px;
   }
 
   .profile__description {
@@ -90,6 +92,7 @@
     margin-top: 14px;
     width: 100%;
     text-align: center;
+    max-width: 282px;
   }
 
   .profile__info {
@@ -123,11 +126,5 @@
   }
   .profile__edit-button {
     margin-right: 70px;
-  }
-}
-
-@media screen and (min-width: 810px) {
-  .profile__title {
-    font-size: 42px;
   }
 }
